# OPSource

./: .env.development  .env.production  .gitattributes  .gitignore  .gitmodules  .gitmodules.backup  .pre-commit-config.yaml  404.html  BITCOIN_MIGRATION.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  Cargo.toml.example  Clarinet.toml  INDEX.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TODO.md  bdk-wallet-example.rs  bitcoin-notes.md  bitcoin_advanced_test.py  bitcoin_test.py  configuration.html  dev_config.py  getting-started.html  index.html  install-clarinet.ps1  main.py  minimal-requirements.txt  opsource.conf  package-lock.json  package.json  print.html  quick-start.html  requirements-bleeding.txt  requirements-dev.txt  requirements-fixed.txt  (+15 more)
.github/: TODO.md  (+9 more)
anya-core/: .markdownlint.json  AGENT_ARCHITECTURE.md  CHANGELOG.md  Cargo (2).toml  Cargo.toml  GITHUB.md  NEW_FEATURES.md  README.md  ROADMAP.md  SECURITY.md  TODO.md
anya-core/.github/workflows/: action_review.yml  ai-labeling.yml  ai-validation.yml  backport.yml  branch_maintenance.yml  dependency-updates.yml  docs-deployment.yml  docs.yml  main.yml  stale.yml
anya-core/config/: services.yaml
anya-core/core/src/: THREAT_MODEL.md
anya-core/core/src/enterprise/: README.md
anya-core/dao/contracts/: dao-core.clar
anya-core/dao/tests/: dao-core.test.ts
anya-core/dao/traits/: dao-trait.clar
anya-core/dependencies/: Cargo.toml
anya-core/dependencies/anya-bitcoin/: Cargo.toml
anya-core/dependencies/anya-enterprise/: Cargo.toml
anya-core/dependencies/anya-enterprise/src/: lib.rs
anya-core/dependencies/anya-extensions/: Cargo.toml
anya-core/dependencies/anya-extensions/src/: lib.rs
anya-core/docs/: OPSource-dev.md  README.md  SYSTEM_MAP.md  VS_AI_rules.md  development.md
anya-core/docs/api/: README.md
anya-core/docs/bitcoin/: lightning.md
anya-core/enterprise/: Cargo.toml
anya-core/enterprise/src/: lib.rs
anya-core/mobile/: Cargo.toml
anya-core/mobile/src/: lib.rs
anya-core/scripts/: build.ps1  dev-setup.ps1  package.sh  requirements.txt  test_core.sh  version-docs.sh
anya-core/scripts/hooks/: pre-commit
anya-core/src/: config.rs  lib.rs
anya-core/src/bitcoin/: lightning.rs  mod.rs
anya-core/src/bitcoin/adapters/: mod.rs  rust.rs
anya-core/src/bitcoin/cross_chain/: atomic_swaps.rs  bridge.rs  liquid.rs  mod.rs  routing.rs  rsk.rs
anya-core/src/bitcoin/dlc/: adaptor.rs  contract.rs  execution.rs  mod.rs  oracle.rs
anya-core/src/bitcoin/interface/: mod.rs
anya-core/src/bitcoin/sidechains/: mod.rs
anya-core/src/bitcoin/taproot/: mod.rs  script.rs  tree.rs
anya-core/src/bitcoin/wallet/: bip32.rs  mod.rs  transactions.rs
anya-core/src/dao/: mod.rs  tests.rs  types.rs
anya-core/src/enterprise/anya-enterprise/: Cargo.toml
anya-core/src/extensions/anya-extensions/: Cargo.toml
anya-core/src/governance/: dao.rs
anya-core/src/ml/: mod.rs  service.rs
anya-core/src/web5/: dwn.rs  identity.rs  mod.rs  protocols.rs
backup/enterprise/: .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
backup/enterprise/.github/workflows/: ci.yml  docs-update.yml  rust.yml
backup/enterprise/anya-enterprise/: .gitmodules
backup/enterprise/benches/: enterprise_benchmarks.rs  rate_limiter.rs
backup/enterprise/src/: error.rs  lib.rs  main.rs  mod.rs  payment.rs  rgb.rs
backup/enterprise/src/agents/: coordinator.rs  mod.rs  security.rs  state.rs  trading.rs
backup/enterprise/src/ai/: enterprise_ai_settings.rs  settings_validator.rs
backup/enterprise/src/analysis/: technical_assessment.rs
backup/enterprise/src/analytics/: engine.rs
backup/enterprise/src/api/: business_logic.rs  mod.rs
backup/enterprise/src/architecture/: system_overview.rs
backup/enterprise/src/atomic/: enterprise_atomic_swaps.rs  swap_protocol.rs
backup/enterprise/src/audit/: logger.rs
backup/enterprise/src/banking/: mod.rs
backup/enterprise/src/bitcoin_core/: mod.rs
backup/enterprise/src/business/: market_intelligence.rs  ml_engine.rs  revenue.rs
backup/enterprise/src/cache/: advanced_cache.rs  mod.rs
backup/enterprise/src/cli/: commands.rs  mod.rs
backup/enterprise/src/compliance/: monitoring.rs  reporting.rs
backup/enterprise/src/config/: institutional.rs  mod.rs
backup/enterprise/src/core/: mod.rs
backup/enterprise/src/custody/: mod.rs
backup/enterprise/src/database/: pool.rs  query_optimizer.rs
backup/enterprise/src/dlc/: mod.rs
backup/enterprise/src/docs/: mod.rs
backup/enterprise/src/domain/: mod.rs
backup/enterprise/src/enterprise/: ml_integration.rs  mod.rs  optimization.rs  portfolio_analysis.rs  risk_constraints.rs  strategy.rs
backup/enterprise/src/enterprise_security/: mod.rs
backup/enterprise/src/fedimint/: fedimint_manager.rs
backup/enterprise/src/fees/: enterprise_fee_manager.rs  invoice_processor.rs
backup/enterprise/src/hsm/: advanced.rs  mod.rs
backup/enterprise/src/infrastructure/: mod.rs
backup/enterprise/src/integration/: cross_layer.rs  mod.rs  service_mesh.rs
backup/enterprise/src/layers/: mod.rs
backup/enterprise/src/lightning/: mod.rs
backup/enterprise/src/liquid/: enterprise_liquid.rs  liquid_compliance.rs  liquid_services.rs
backup/enterprise/src/logging/: mod.rs
backup/enterprise/src/metrics/: mod.rs
backup/enterprise/src/mining/: operations.rs  performance.rs
backup/enterprise/src/ml/: data_acquisition.rs  data_pipeline.rs  enhanced_model.rs  features.rs  init.rs  mod.rs  patterns.rs  risk.rs  training.rs  unified_system.rs  validation.rs  versioning.rs
backup/enterprise/src/monitoring/: enhanced_capabilities.rs  enhanced_monitor.rs  enhanced_monitoring.rs  institutional.rs  mod.rs  real_time.rs
backup/enterprise/src/performance/: database_optimizer.rs  load_balancer.rs  optimization_engine.rs
backup/enterprise/src/pipeline/: mod.rs
backup/enterprise/src/policy/: institutional.rs
backup/enterprise/src/rate_limiter/: cache.rs  compliance.rs  emergency.rs  mod.rs
backup/enterprise/tests/: cli_integration.rs  institutional_tests.rs  integration_tests.rs  property_tests.rs
(+406 files in other folders)
