[workspace]
members = [
    "anya-core",
    "anya-core/enterprise",
    "anya-core/mobile",
    "anya-core/dependencies/anya-bitcoin",
    "anya-core/dependencies/anya-extensions"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
metrics = "0.21.1"
actix-web = "4.4.0"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
tch = "0.13"
rand = "0.8"
futures = "0.3"
ring = "0.16"
jsonwebtoken = "8.1"
mockall = "0.11"
tokio-test = "0.4"
bitcoin = "0.30.0"
http = "0.2"
