[workspace]
members = [
    "anya-core",
    "anya-core/src/enterprise/anya-enterprise",
    "anya-core/src/extensions/anya-extensions",
    "anya-core/dependencies/anya-bitcoin",
    "anya-core/dependencies/anya-extensions"
]
resolver = "2"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.25"
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
metrics = "0.21.1"
actix-web = "4.4.0"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
tch = "0.13"
rand = "0.8"
futures = "0.3"
ring = "0.16"
jsonwebtoken = "8.1"
mockall = "0.11"
tokio-test = "0.4"
bitcoin = { version = "0.32.1", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
libp2p = { version = "0.53.1", features = ["full"] }
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "serde"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
criterion = "0.5.1"
proptest = "1.2.0"
lightning = "0.0.116"
rgb-core = "0.10"
rsk = "0.1.0"
taproot = "0.1.0"
react-native-rust = "0.1.0"
uniffi = "0.24"

[workspace.package]
edition = "2021"
version = "0.1.0"
