[package]
name = "anya-core"
version = "0.1.0"
edition = "2021"
description = "Unified Bitcoin development platform with integrated mobile and enterprise features"

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.31", features = ["serde"] }
tracing = "0.1.40"
metrics = "0.21.1"
actix-web = "4.4.0"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
web5 = { git = "https://github.com/TBD54566975/web5-rs", package = "web5", tag = "v4.0.0" }
thiserror = "1.0.69"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
ndarray = "0.15.6"
tch = "0.13"
rand = "0.8.5"
futures = "0.3.30"
ring = "0.17.8"
jsonwebtoken = "9.2.0"
mockall = "0.11.4"
tokio-test = "0.4.3"
bitcoin = { version = "0.32.1", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
http = "0.2"

# Core dependencies
pyo3 = { version = "0.19.2", features = ["extension-module"] }
serde_yaml = "0.9.25"
async-trait = "0.1"

# Web5 Integration
jsonschema = "0.17.1"

# Blockchain Integration
bitcoin-wallet = "1.1.0"

# Networking
libp2p = { version = "0.53.1", features = ["full"] }

# Logging and Metrics
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-futures = "0.2.5"

# Cryptography
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core", "serde"] }

# Testing
criterion = "0.5.1"
proptest = "1.2.0"
test-log = { version = "0.2.14", features = ["trace"] }

# Bitcoin Core Dependencies
lightning = "0.0.116"

# Smart Contract Dependencies
rgb-core = "0.10"
rsk = "0.1.0"
taproot = "0.1.0"

# Web5 and DID Dependencies
did-key = "0.2"
handshake-client = "0.1.0"

# Mobile Dependencies
react-native-rust = "0.1.0"
uniffi = "0.24"

[dependencies]
# Core Dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.25"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Web5 Integration
web5 = { workspace = true, optional = true }
jsonschema = "0.17.1"

# Blockchain Integration
bitcoin = { workspace = true, optional = true }
bitcoincore-rpc = { workspace = true }

# Networking
libp2p = { workspace = true }

# Logging and Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = "0.2.5"
metrics = { version = "0.21" }

# Time and Date
chrono = { version = "0.4", features = ["serde"] }

# Terminal Detection
is-terminal = "0.4.9"

# Cryptography
curve25519-dalek = { workspace = true }

# Utilities
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8"
base64 = "0.21.7"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
x509-parser = "0.15.1"
rustls = "0.22.1"
data-encoding = "2.5.0"
totp-rs = "5.4.0"

# Bitcoin Core Dependencies
lightning = { workspace = true }
rgb-core = { workspace = true }
taproot = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = "3.9.0"
criterion = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = ["std", "bitcoin_integration", "mobile", "web5"]
std = []
nightly = []
bitcoin_integration = ["bitcoin"]
mobile = []
web5 = ["dep:web5"]
enterprise = []
full = ["mobile", "enterprise"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true