[package]
name = "anya-core"
version = "0.1.0"
edition = "2021"
description = "Unified Bitcoin development platform with integrated mobile and enterprise features"

[dependencies]
# Core Dependencies
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# Web5 Integration
web5 = { workspace = true, optional = true }
jsonschema = "0.17.1"

# Blockchain Integration
bitcoin = { workspace = true, optional = true }
bitcoincore-rpc = { workspace = true }

# Networking
libp2p = { workspace = true }

# Logging and Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = "0.2.5"
metrics = { workspace = true }

# Time and Date
chrono = { workspace = true }

# Terminal Detection
is-terminal = "0.4.9"

# Cryptography
curve25519-dalek = { workspace = true }

# Utilities
uuid = { version = "1.8.0", features = ["v4"] }
rand = { workspace = true }
base64 = "0.21.7"
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
x509-parser = "0.15.1"
rustls = "0.22.1"
data-encoding = "2.5.0"
jsonwebtoken = { workspace = true }
totp-rs = "5.4.0"

# Bitcoin Core Dependencies
lightning = { workspace = true }
rgb-core = { workspace = true }
rsk = { workspace = true }
taproot = { workspace = true }

# Additional dependencies from original anya package
pyo3 = { version = "0.19.2", features = ["extension-module"] }
did-key = "0.2"
handshake-client = "0.1.0"
react-native-rust = "0.1.0"
uniffi = "0.24"

[[bin]]
name = "anya"
path = "src/bin/main.rs"

[lib]
name = "anya"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
tempfile = "3.9.0"
criterion = { workspace = true }
proptest = { workspace = true }
test-log = { version = "0.2.14", features = ["trace"] }

[build-dependencies]
tonic-build = "0.10.2"

[features]
default = ["std", "bitcoin_integration", "mobile", "web5"]
std = []
nightly = []
bitcoin_integration = ["bitcoin"]
mobile = []
web5 = ["dep:web5"]
enterprise = []
full = ["mobile", "enterprise"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true