[package]
name = "anya-core"
version = "0.1.0"
edition = "2021"
authors = ["Anya Core Team"]
description = "Core functionality for the Anya platform"

[workspace]
members = [
    "src/enterprise/anya-enterprise",
    "src/extensions/anya-extensions",
    "dependencies/anya-bitcoin",
    "dependencies/anya-extensions"
]
resolver = "2"

[dependencies]
# Bitcoin dependencies
bitcoin = { version = "0.32.1", features = ["rand"] }
bitcoincore-rpc = "0.17.0"
secp256k1 = { version = "0.27.0", features = ["rand"] }
bdk = { version = "0.30.2" }

# Lightning dependencies
lightning = { version = "0.0.116" }
lightning-persister = { version = "0.0.116" }
lightning-background-processor = { version = "0.0.116" }
lightning-block-sync = { version = "0.0.116" }
lightning-invoice = { version = "0.26.0" }
lightning-net-tokio = { version = "0.0.116" }

# Cross-chain dependencies
rgb-core = "0.10"
rsk = "0.1.0"
taproot = "0.1.0"
elements = "0.22.0"  # Liquid/Elements dependency
elements-rpc = "0.17.0"  # Liquid/Elements RPC client

# Web5 dependencies
did-resolver = "0.5.0"
did-key = "0.2.1"
did-ion = "0.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
base64 = "0.21.7"
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
multibase = "0.9.1"
multihash = "0.18.1"
reqwest = { version = "0.11.24", features = ["json"] }

# Utilities
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1.77"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
futures = "0.3"
hex = "0.4.3"

[lib]
name = "anya_core"
path = "src/lib.rs"

[features]
default = ["bitcoin-full", "web5", "liquid"]
bitcoin-full = []
lightning = []
dlc = []
taproot-assets = []
cross-chain = []
web5 = []
liquid = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
panic = "abort"

[profile.dev.package."*"]
opt-level = 3