[package]
name = "anya-core-dependencies"
version = "0.2.7"
authors = ["Botshelo Mokoka"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botshelomokoka/anya-core"
description = "Core dependencies and shared components for the Anya Bitcoin Platform"

[dependencies]
opentelemetry = { version = "0.21.0", features = ["rt-tokio"], optional = true }

[features]
default = ["standard-security"]
standard-security = []
advanced-security = []
enterprise = ["advanced-security", "hardware-wallet", "metrics"]
hardware-wallet = []
metrics = ["dep:opentelemetry"]

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps]
ignore = ["criterion"] # Used only in bench
