[package]
name = "anya-mobile"
version = "0.1.0"
edition = "2021"
authors = ["Anya Mobile Contributors"]
description = "Mobile platform integration for Anya Core"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botshelomokoka/anya-core"

[dependencies]
anya-core = { path = "../../anya-core", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
react-native-rust = { workspace = true }
uniffi = { workspace = true }

[lib]
name = "anya_mobile"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
offline-mode = []
low-memory = [] 