[package]
name = "enterprise"
version = "0.1.0"
edition = "2021"
description = "Enterprise integration module for Anya"
authors = ["Botshelo Mokoka"]
license = "MIT"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing = "0.1.40"
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.75"
thiserror = "1.0"
prometheus = { version = "0.13", features = ["process"] }

[dev-dependencies]
tokio-test = "0.4.3"
mockall = "0.11"
pretty_assertions = "1.4.0"
test-log = "0.2.14"
tracing-subscriber = "0.3.18"
