[package]
name = "anya-bitcoin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anya-core = { path = "../anya-core" }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
bitcoincore-rpc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = "0.4"
