[package]
name = "anya-bitcoin"
version = "0.1.0"
edition = "2021"
authors = ["Anya Contributors"]
description = "Bitcoin-specific functionality for Anya project"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botshelomokoka/anya-core"

[dependencies]
anya-core = { path = "../../../" }
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
bitcoincore-rpc = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"
