[package]
name = "anya-extensions"
version = "0.1.0"
edition = "2021"
authors = ["Anya Extensions Contributors"]
description = "Core extensions for Anya Platform"
license = "MIT OR Apache-2.0"
repository = "https://github.com/botshelomokoka/anya-core"

[lib]
name = "anya_extensions"
path = "src/lib.rs"

[dependencies]
anya-core = { path = "../../.." }
tokio = { workspace = true }
serde = { workspace = true }

