[package]
name = "anya-extensions"
version = "0.1.0"
edition = "2021"
authors = ["Anya Contributors"]
license = "MIT OR Apache-2.0"
description = "Extensions for Anya Core"

[lib]
name = "anya_extensions"
path = "src/lib.rs"

[dependencies]
# Core Dependencies
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Blockchain Integration
bitcoin = { workspace = true }
secp256k1 = { workspace = true }
bitcoincore-rpc = { workspace = true }

# Web5 Integration
web5 = { workspace = true }

# Internal Dependencies
anya-core = { path = "../../../" }

[features]
default = ["standard"]
standard = []
advanced = ["standard"]
enterprise = ["advanced"]
